# snpl

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  snpl.afm.html  snpl.bod.html  snpl.dsc.html  snpl.fit.html  snpl.gpc.html  snpl.html  snpl.image.html  snpl.rheo.html  snpl.tensile.html  snpl.util.html  snpl.uvvis.html
docs/.doctrees/: environment.pickle  index.doctree  modules.doctree  snpl.afm.doctree  snpl.bod.doctree  snpl.doctree  snpl.dsc.doctree  snpl.fit.doctree  snpl.gpc.doctree  snpl.image.doctree  snpl.rheo.doctree  snpl.tensile.doctree  snpl.util.doctree  snpl.uvvis.doctree
docs/_modules/: index.html  snpl.html
docs/_modules/snpl/: afm.html  bod.html  dsc.html  fit.html  gpc.html  image.html  rheo.html  tensile.html  util.html  uvvis.html
docs/_sources/: index.rst.txt  modules.rst.txt  snpl.afm.rst.txt  snpl.bod.rst.txt  snpl.dsc.rst.txt  snpl.fit.rst.txt  snpl.gpc.rst.txt  snpl.image.rst.txt  snpl.rheo.rst.txt  snpl.rst.txt  snpl.tensile.rst.txt  snpl.util.rst.txt  snpl.uvvis.rst.txt
src/snpl/: __init__.py  afm.py  bod.py  dsc.py  fit.py  gpc.py  image.py  matplotlibrc_snpl  rheo.py  tensile.py  util.py  uvvis.py
