[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snpl"
version = "0.3.0"
description = "Personal utilities for data processing & visualization"
readme = "README.md"
authors = [{name = "Shintaro Nakagawa", email = "shntrnkgw@gmail.com"}]
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.23", 
    "matplotlib>=3.5.3",
    "scipy>=1.9.0",
    "olefile>=0.46",
    "hicsv-python>=0.0.0"
]

[project.urls]
Homepage = "https://github.com/shntrnkgw/snpl"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
snpl = ["matplotlibrc_snpl"]